NA|Fixing innovayion stickyness to position relative on mobile |01

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1847,13 +1847,13 @@ nav.scrolled .dropdown .dropbtn {
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .sticky-column {
-    position: sticky;
+    position: relative;
     top: 62px !important;
     background-color: #fff;
   }
   .sticky-column-inovations {
-    position: sticky;
-    top: 130px !important;
+    position: relative;
+    top: 0px !important;
     background-color: #fff;
   }
 }
